device drivers moved

--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -19,3 +19,9 @@ desc Enable memory access alignement checking on x86 processors
 default defined
 %config end
 
+%config CONFIG_CPU_X86_SYSENTER
+parent CONFIG_CPU_X86
+desc enable sysenter/sysexit instructions for system call fast path
+default defined
+%config end
+
