--- a/drivers/device/Makefile
+++ b/drivers/device/Makefile
@@ -1,81 +1,3 @@
 
-ifeq ($(CONFIG_DRIVER_NET_NE2000), defined)
- subdirs += net-ne2000
-endif
-
-ifeq ($(CONFIG_DRIVER_NET_TUNTAP), defined)
- subdirs += net-tuntap
-endif
-
-ifeq ($(CONFIG_DRIVER_CHAR_SOCLIBTTY), defined)
- subdirs += tty-soclib
-endif
-
-ifeq ($(CONFIG_DRIVER_CHAR_VGATTY), defined)
- subdirs += tty-vga
-endif
-
-ifeq ($(CONFIG_DRIVER_CHAR_EMUTTY), defined)
- subdirs += tty-emu
-endif
-
-ifeq ($(CONFIG_DRIVER_CHAR_UART8250), defined)
- subdirs += uart-8250
-endif
-
-ifeq ($(CONFIG_DRIVER_TIMER_8253), defined)
- subdirs += timer-8253
-endif
-
-ifeq ($(CONFIG_DRIVER_TIMER_EMU), defined)
- subdirs += timer-emu
-endif
-
-ifeq ($(CONFIG_DRIVER_NET_3C900), defined)
- subdirs += net-3c900
-endif
-
-ifeq ($(CONFIG_DRIVER_ENUM_PCI), defined)
- subdirs += enum-pci
-endif
-
-ifeq ($(CONFIG_DRIVER_ENUM_ISAPNP), defined)
- subdirs += enum-isapnp
-endif
-
-ifeq ($(CONFIG_DRIVER_FB_VGA), defined)
- subdirs += fb-vga
-endif
-
-ifeq ($(CONFIG_DRIVER_ICU_8259), defined)
- subdirs += icu-8259
-endif
-
-ifeq ($(CONFIG_DRIVER_ICU_SOCLIB), defined)
- subdirs += icu-soclib
-endif
-
-ifeq ($(CONFIG_DRIVER_TIMER_SOCLIB), defined)
- subdirs += timer-soclib
-endif
-
-ifeq ($(CONFIG_DRIVER_INPUT_8042), defined)
- subdirs += input-8042
-endif
-
-ifeq ($(CONFIG_DRIVER_SOUND_SB16), defined)
- subdirs += sound-sb16
-endif
-
-ifeq ($(CONFIG_DRIVER_BLOCK_ATA), defined)
- subdirs += block-ata
-endif
-
-ifeq ($(CONFIG_DRIVER_BLOCK_RAMDISK), defined)
- subdirs += block-ramdisk
-endif
-
-ifeq ($(CONFIG_DRIVER_BLOCK_PARTITION), defined)
- subdirs += block-partition
-endif
+subdirs = block char enum fb icu input net sound timer
 
