--- a/libunix/unix.config
+++ b/libunix/unix.config
@@ -3,4 +3,23 @@
 desc Enable UNIX support
 require CONFIG_PTHREAD_STACK_SIZE
 depend CONFIG_HEXO_SCHED
+depend CONFIG_HEXO_VMEM
+require CONFIG_UNIX_STACK_VADDR
+require CONFIG_UNIX_START_VADDR
 %config end
+
+%config CONFIG_UNIX_STACK_VADDR
+desc Set unix process user stack base address
+default 0x80000000
+%config end
+
+%config CONFIG_UNIX_START_VADDR
+desc Set unix process user start address
+default 0x81000000
+%config end
+
+%config CONFIG_UNIX_KSTACK_SIZE
+desc Set unix process kernel stack size
+default 4096
+%config end
+
