soclib mips and pcc are working fine

--- a/libunix/unix.config
+++ b/libunix/unix.config
@@ -9,16 +9,19 @@ require CONFIG_UNIX_START_VADDR
 %config end
 
 %config CONFIG_UNIX_STACK_VADDR
+parent CONFIG_UNIX
 desc Set unix process user stack base address
 default 0x80000000
 %config end
 
 %config CONFIG_UNIX_START_VADDR
+parent CONFIG_UNIX
 desc Set unix process user start address
 default 0x81000000
 %config end
 
 %config CONFIG_UNIX_KSTACK_SIZE
+parent CONFIG_UNIX
 desc Set unix process kernel stack size
 default 4096
 %config end
