--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -3,6 +3,7 @@
 desc Enable POSIX thread support
 require CONFIG_PTHREAD_STACK_SIZE
 depend CONFIG_HEXO_SCHED
+provide CONFIG_MODULES=+libpthread
 %config end
 
 %config CONFIG_PTHREAD_STACK_SIZE
