--- a/libunix/unix.config
+++ b/libunix/unix.config
@@ -6,6 +6,7 @@ depend CONFIG_HEXO_SCHED
 depend CONFIG_HEXO_VMEM
 require CONFIG_UNIX_STACK_VADDR
 require CONFIG_UNIX_START_VADDR
+provide CONFIG_MODULES=+libunix
 %config end
 
 %config CONFIG_UNIX_STACK_VADDR
