--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -1,4 +1,10 @@
 
+%config CONFIG_MUTEK_MAIN
+desc Enable Mutek global intialization. provide mutek_main() and mutek_main_smp() functions.
+desc Can be disabled if application code handle all the initialization stuff.
+default defined
+%config end
+
 %config CONFIG_MUTEK_CONSOLE
 desc Enable text console support
 depend CONFIG_DRIVER_TTY CONFIG_DRIVER_UART
