--- a/scripts/global.config
+++ b/scripts/global.config
@@ -1,4 +1,9 @@
 
+%config CONFIG_MODULES
+flags nodefine mandatory
+default hexo libc mutek gpct
+%config end
+
 %config CONFIG_COMPILE_SAVETEMPS
 desc Keep all intermediate files generated during compilation.
 desc Preprocesseced (.i) and assembler (.s) files may be usefull to solve compilation issues.
