Make configuration more modular: allow standalone module directories

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -2,6 +2,7 @@
 %config CONFIG_ARCH_EMU
 desc Linux Emulation platform support
 provide	CONFIG_ARCH_NAME=emu
+provide CONFIG_MODULES=+arch:%CONFIGPATH
 require CONFIG_ARCH_EMU_MEMORY
 require CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
 exclude CONFIG_SMP CONFIG_CLUSTER
