--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -3,6 +3,7 @@
 desc IBM PC platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=ibmpc
+provide CONFIG_MODULES=+arch:%CONFIGPATH
 %config end
 
 %config CONFIG_ARCH_IBMPC_MEMORY
