--- a/arch/simple/simple.config
+++ b/arch/simple/simple.config
@@ -3,6 +3,7 @@
 desc Simple platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=simple
+provide CONFIG_MODULES=+arch:%CONFIGPATH
 require CONFIG_ARCH_SIMPLE_RAM_SIZE
 require CONFIG_ARCH_SIMPLE_RAM_ADDR
 require CONFIG_ARCH_SIMPLE_ROM_SIZE
