--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -3,5 +3,6 @@
 desc SocLib platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=soclib
+provide CONFIG_MODULES=+arch:%CONFIGPATH
 %config end
 
