--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -3,7 +3,7 @@
 desc Enable POSIX thread support
 require CONFIG_PTHREAD_STACK_SIZE
 depend CONFIG_HEXO_SCHED
-provide CONFIG_MODULES=+libpthread
+provide CONFIG_MODULES=+libpthread:%CONFIGPATH
 %config end
 
 %config CONFIG_PTHREAD_STACK_SIZE
