--- a/libvfs/vfs.config
+++ b/libvfs/vfs.config
@@ -1,5 +1,5 @@
 
 %config CONFIG_VFS
 desc Enables VFS support
-provide CONFIG_MODULES=+libvfs
+provide CONFIG_MODULES=+libvfs:%CONFIGPATH
 %config end
