--- a/cpu/68hcs12/68hcs12.config
+++ b/cpu/68hcs12/68hcs12.config
@@ -3,6 +3,7 @@
 desc 68HCS12 processors support
 default undefined
 provide CONFIG_CPU_NAME=68hcs12
+provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_RESET_ADDR=0x00004000
 provide CONFIG_COMPILE_SIZEOF_INT=2
 provide CONFIG_CPU_ENDIAN_LITTLE
