--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -4,6 +4,7 @@ desc PowerPC processors support
 default undefined
 require	CONFIG_ARCH_SOCLIB
 provide CONFIG_CPU_NAME=ppc
+provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_RESET_ADDR=0xfffffffc
 provide CONFIG_CPU_ENDIAN_BIG
 provide CONFIG_COMPILE_SIZEOF_INT=4
