source configuration system updated

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -1,7 +1,8 @@
 
 %config CONFIG_MODULES
-flags nodefine mandatory
-default hexo libc mutek gpct
+desc List of modules to enabled. See doc.
+flags mandatory
+default
 %config end
 
 %config CONFIG_COMPILE_SAVETEMPS
