cpu atomic operations added for soclib/mips

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -6,3 +6,8 @@ provide	CONFIG_ARCH_NAME=soclib
 provide CONFIG_MODULES=+arch:%CONFIGPATH
 %config end
 
+%config CONFIG_ARCH_SOCLIB_RAMLOCK
+desc Enable use of ramlock devices instead of cpu atomic operations
+default defined
+%config end
+
