configuration tokens definitions moved from src to .config

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -8,3 +8,9 @@ require CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
 exclude CONFIG_SMP CONFIG_CLUSTER
 %config end
 
+%config CONFIG_ARCH_EMU_MEMORY
+desc Set the amount of memory to emulate in bytes
+parent CONFIG_ARCH_EMU
+default 16777216
+%config end
+
