--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -11,3 +11,8 @@ desc Set the amount of ram memory. Ram size will be autodetected if this token i
 parent CONFIG_ARCH_IBMPC
 %config end
 
+%config CONFIG_ARCH_IBMPC_DMA
+desc Support 8237 dma controller found in IBM PCs
+parent CONFIG_ARCH_IBMPC
+%config end
+
