--- a/drivers/device/net/ne2000/net-ne2000.config
+++ b/drivers/device/net/ne2000/net-ne2000.config
@@ -8,3 +8,9 @@ depend CONFIG_DRIVER_ICU
 provide CONFIG_DRIVER_NET
 %config end
 
+%config CONFIG_DRIVER_NET_NE2000_FRAGMENT
+desc NE2000 driver option: use fragmenation
+parent CONFIG_DRIVER_NET_NE2000
+default defined
+%config end
+
