--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -45,3 +45,9 @@ parent CONFIG_NETWORK
 depend CONFIG_NETWORK_IPV4
 %config end
 
+%config CONFIG_NETWORK_PACKET_ASM
+desc A processor specific packet.h header is available.
+default undefined
+flags nodefine
+%config end
+
