--- a/scripts/global.config
+++ b/scripts/global.config
@@ -46,3 +46,7 @@ provide CONFIG_LIBC_ASSERT
 provide CONFIG_DEBUG_SPINLOCK_LIMIT=32000000
 %config end
 
+%config CONFIG_DEBUG_SPINLOCK_LIMIT
+desc Enable 32bits deadline counter for spinlocks and assert() counter never reachs 0
+%config end
+
