cache control primitives added

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -10,6 +10,12 @@ desc Processors uses cache
 default undefined
 %config end
 
+%config CONFIG_CPU_CACHE_LINE
+desc Size of a single cpu cache line in bytes
+default 4
+flags mandatory
+%config end
+
 %config CONFIG_CPU_CACHE_COHERENCY
 desc Processors supports cache coherency mechanism
 require CONFIG_CPU_CACHE
