--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -11,7 +11,7 @@ provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_RESET_ADDR=0xbfc00000
 provide CONFIG_COMPILE_SIZEOF_INT=4
 # 32 general purpose registers + pc
-provide CONFIG_LIBC_SETJMP_REG_COUNT=33
+# provide CONFIG_LIBC_SETJMP_REG_COUNT=33
 %config end
 
 %config CONFIG_CPU_MIPS_VERSION
