Only compile main when needed

--- a/mutek/Makefile
+++ b/mutek/Makefile
@@ -1,5 +1,9 @@
 
-objs = main.o
+objs = 
+
+ifeq ($(CONFIG_MUTEK_MAIN), defined)
+ objs += main.o
+endif
 
 ifeq ($(CONFIG_MUTEK_LOGO), defined)
  objs += mutek_logo_320x200.o
