scheduler static affinity and candidate checking are working

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -74,8 +74,8 @@ depend CONFIG_COMPILE_INSTRUMENT
 desc Hexo scheduler feature is enabled
 default defined
 require CONFIG_HEXO_SCHED_IDLE_STACK_SIZE
-require CONFIG_HEXO_SCHED_MIGRATION CONFIG_HEXO_SCHED_ALGO_STATIC
-single  CONFIG_HEXO_SCHED_MIGRATION CONFIG_HEXO_SCHED_ALGO_STATIC
+require CONFIG_HEXO_SCHED_MIGRATION CONFIG_HEXO_SCHED_STATIC
+single  CONFIG_HEXO_SCHED_MIGRATION CONFIG_HEXO_SCHED_STATIC
 %config end
 
 %config CONFIG_HEXO_SCHED_PREEMPT
@@ -90,17 +90,18 @@ parent CONFIG_HEXO_SCHED
 default defined
 %config end
 
-%config CONFIG_HEXO_SCHED_ALGO_STATIC
+%config CONFIG_HEXO_SCHED_STATIC
 desc Scheduler algorithm use per cpu context list
 parent CONFIG_HEXO_SCHED
 default undefined
 %config end
 
-%config CONFIG_HEXO_SCHED_AFFINITY
-desc Handle context cpu affininty
+%config CONFIG_HEXO_SCHED_MIGRATION_AFFINITY
+desc Handle scheduler context cpu affininty in migration mode
+depend CONFIG_HEXO_SCHED_MIGRATION
+depend CONFIG_SMP
 parent CONFIG_HEXO_SCHED
 default undefined
-depend CONFIG_SMP
 %config end
 
 %config CONFIG_HEXO_SCHED_IDLE_STACK_SIZE
@@ -108,6 +109,12 @@ desc Size of the stack allocated for idle scheduler context.
 desc Stack size is specified in stack words count.
 parent CONFIG_HEXO_SCHED
 default 256
+%config end
+
+%config CONFIG_HEXO_SCHED_CANDIDATE_FCN
+desc Enables sched_context_candidate_fcn(), uses an external function to check if a running thread must be selected
+parent CONFIG_HEXO_SCHED
+default undefined
 %config end
 
 %config CONFIG_HEXO_VMEM
