pthread attributes fixed

--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -37,3 +37,9 @@ parent CONFIG_PTHREAD
 default defined
 %config end
 
+%config CONFIG_PTHREAD_ATTRIBUTES
+desc Provide pthread thread attributes support
+parent CONFIG_PTHREAD
+default defined
+%config end
+
