Add mwmr instrumentation

--- a/libmwmr/mwmr.config
+++ b/libmwmr/mwmr.config
@@ -19,3 +19,9 @@ desc Mwmr on Pthreads, with no hardware protocol compatibility
 parent CONFIG_MWMR
 depend CONFIG_PTHREAD
 %config end
+
+%config CONFIG_MWMR_INSTRUMENTATION
+desc Mwmr timing observation, only under SRL
+parent CONFIG_MWMR
+require CONFIG_SRL
+%config end
