--- a/libsrl/srl.config
+++ b/libsrl/srl.config
@@ -9,3 +9,7 @@ depend CONFIG_MWMR_SOCLIB
 require CONFIG_MUTEK_MAIN=undefined
 require CONFIG_ARCH_SOCLIB_RAMLOCK=undefined
 %config end
+
+%config CONFIG_SRL_NTTY
+desc Total TTYs
+%config end
