--- a/libmwmr/mwmr.config
+++ b/libmwmr/mwmr.config
@@ -25,3 +25,9 @@ desc Mwmr timing observation, only under SRL
 parent CONFIG_MWMR
 require CONFIG_SRL
 %config end
+
+%config CONFIG_MWMR_USE_RAMLOCKS
+desc Mwmr is ramlocks based, only under SRL, does not change platform s lock backend
+parent CONFIG_MWMR
+require CONFIG_SRL
+%config end
