Add the srl_sleep_cycles primitive

--- a/libsrl/Makefile
+++ b/libsrl/Makefile
@@ -3,4 +3,6 @@ objs = main.o srl_log.o
 
 ifeq ($(CONFIG_PTHREAD),undefined)
 objs += barrier.o sched_wait.o
+else
+objs += posix_wait_cycles.o
 endif
