--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -2,8 +2,9 @@
 objs =						\
 cpu.o						\
 context.o					\
+rwlock.o					\
 mem_alloc.o					\
-device.o
+device.o					
 
 ifeq ($(CONFIG_HEXO_VMEM), defined)
 objs += vmem_paddr.o
