- adding CONFIG_UNIX_DEBUG for debugging purpose - adding a temporary list of syscalls to implement

--- a/libunix/unix.config
+++ b/libunix/unix.config
@@ -27,3 +27,7 @@ desc Set unix process kernel stack size
 default 4096
 %config end
 
+%config CONFIG_UNIX_DEBUG
+parent CONFIG_UNIX
+desc Set a debugging flag
+%config end
