- Devfs files set up - few code in but nothing working and not compiling!

--- a/drivers/fs/Makefile
+++ b/drivers/fs/Makefile
@@ -5,3 +5,7 @@ endif
 ifeq ($(CONFIG_DRIVER_FS_PIPE), defined)
  subdirs += pipe
 endif
+
+ifeq ($(CONFIG_DRIVER_FS_DEV), defined)
+ subdirs += devfs
+endif
