- filling vfs_context_s for /dev - trying to create the node in the vfs but stopped in vfat driver (not finding the node /dev). Bug or ... ?!

--- a/drivers/fs/devfs/devfs.config
+++ b/drivers/fs/devfs/devfs.config
@@ -2,3 +2,8 @@
 desc give a device file system
 default undefined
 %config end
+
+%config CONFIG_DEVFS_DEBUG
+parent CONFIG_DRIVER_FS_DEV
+desc Set a debugging flag
+%config end
