user mode support added for x86 and mips, interrupt handlers rewritten, cpu cld removed

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -10,6 +10,11 @@ desc Processors uses cache
 default undefined
 %config end
 
+%config CONFIG_CPU_USER
+desc Enable processor user privilege level support
+default undefined
+%config end
+
 %config CONFIG_CPU_CACHE_LINE
 desc Size of a single cpu cache line in bytes
 default 4
