--- a/drivers/fs/devfs/devfs.config
+++ b/drivers/fs/devfs/devfs.config
@@ -1,9 +1,11 @@
 %config CONFIG_DRIVER_FS_DEV
+parent CONFIG_VFS
+depend CONFIG_VFS
 desc give a device file system
 default undefined
 %config end
 
 %config CONFIG_DEVFS_DEBUG
-parent CONFIG_DRIVER_FS_DEV
+require CONFIG_DRIVER_FS_DEV
 desc Set a debugging flag
 %config end
