--- a/drivers/fs/vfat/vfat.config
+++ b/drivers/fs/vfat/vfat.config
@@ -1,4 +1,6 @@
 %config CONFIG_DRIVER_FS_VFAT
+parent CONFIG_VFS
+depend CONFIG_VFS
 desc enable VFAT filesystem support
 default undefined
 %config end
