--- a/libvfs/vfs.config
+++ b/libvfs/vfs.config
@@ -3,3 +3,18 @@
 desc Enables VFS support
 provide CONFIG_MODULES=+libvfs:%CONFIGPATH
 %config end
+
+%config CONFIG_VFS_DEBUG
+parent CONFIG_VFS
+desc Enables VFS debugging
+%config end
+
+%config CONFIG_BC_DEBUG
+parent CONFIG_VFS
+desc Enables BufferCache debugging
+%config end
+
+%config CONFIG_BC_INSTRUMENT
+parent CONFIG_VFS
+desc Enables BufferCache instrumentation
+%config end
