scheduler moved away from hexo

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -16,7 +16,7 @@ default defined
 %config CONFIG_LIBC_SEMAPHORE
 desc libc semaphore feature enabled
 default defined
-depend CONFIG_HEXO_SCHED
+depend CONFIG_MUTEK_SCHEDULER
 %config end
 
 %config CONFIG_LIBC_SETJMP_REG_COUNT
