--- a/libmwmr/mwmr.config
+++ b/libmwmr/mwmr.config
@@ -9,7 +9,7 @@ single CONFIG_MWMR_SOCLIB CONFIG_MWMR_PTHREAD
 %config CONFIG_MWMR_SOCLIB
 desc Mwmr on SOCLIB, with hardware protocol compatibility
 parent CONFIG_MWMR
-depend CONFIG_HEXO_SCHED
+depend CONFIG_MUTEK_SCHEDULER
 depend CONFIG_ARCH_SOCLIB
 require CONFIG_ARCH_SOCLIB_RAMLOCK=undefined
 %config end
