--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -2,7 +2,8 @@
 %config CONFIG_PTHREAD
 desc Enable POSIX thread support
 require CONFIG_PTHREAD_STACK_SIZE
-depend CONFIG_HEXO_SCHED
+depend CONFIG_MUTEK_SCHEDULER
+depend CONFIG_MUTEK_RWLOCK
 provide CONFIG_MODULES=+libpthread:%CONFIGPATH
 %config end
 
