--- a/mutek/Makefile
+++ b/mutek/Makefile
@@ -9,4 +9,11 @@ ifeq ($(CONFIG_MUTEK_LOGO), defined)
  objs += mutek_logo_320x200.o
 endif
 
+ifeq ($(CONFIG_MUTEK_SCHEDULER), defined)
+objs += scheduler.o
+endif
+
+ifeq ($(CONFIG_MUTEK_RWLOCK), defined)
+objs += rwlock.o
+endif
 
