--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -20,3 +20,56 @@ desc Add builtin MutekH logo bitmap to the kernel
 depend CONFIG_DRIVER_FB
 %config end
 
+%config CONFIG_MUTEK_SCHEDULER
+desc Hexo scheduler feature is enabled
+default defined
+require CONFIG_MUTEK_SCHEDULER_IDLE_STACK_SIZE
+require CONFIG_MUTEK_SCHEDULER_MIGRATION CONFIG_MUTEK_SCHEDULER_STATIC
+single  CONFIG_MUTEK_SCHEDULER_MIGRATION CONFIG_MUTEK_SCHEDULER_STATIC
+%config end
+
+%config CONFIG_MUTEK_SCHEDULER_PREEMPT
+desc Scheduler is preemptiv
+parent CONFIG_MUTEK_SCHEDULER
+depend CONFIG_DRIVER_TIMER
+%config end
+
+%config CONFIG_MUTEK_SCHEDULER_MIGRATION
+desc Scheduler algorithm use permanent context migration among available processors
+parent CONFIG_MUTEK_SCHEDULER
+default defined
+%config end
+
+%config CONFIG_MUTEK_SCHEDULER_STATIC
+desc Scheduler algorithm use per cpu context list
+parent CONFIG_MUTEK_SCHEDULER
+default undefined
+%config end
+
+%config CONFIG_MUTEK_SCHEDULER_MIGRATION_AFFINITY
+desc Handle scheduler context cpu affininty in migration mode
+depend CONFIG_MUTEK_SCHEDULER_MIGRATION
+depend CONFIG_SMP
+parent CONFIG_MUTEK_SCHEDULER
+default undefined
+%config end
+
+%config CONFIG_MUTEK_SCHEDULER_IDLE_STACK_SIZE
+desc Size of the stack allocated for idle scheduler context.
+desc Stack size is specified in stack words count.
+parent CONFIG_MUTEK_SCHEDULER
+default 256
+%config end
+
+%config CONFIG_MUTEK_SCHEDULER_CANDIDATE_FCN
+desc Enables sched_context_candidate_fcn(), uses an external function to check if a running thread must be selected
+parent CONFIG_MUTEK_SCHEDULER
+default undefined
+%config end
+
+%config CONFIG_MUTEK_RWLOCK
+depend CONFIG_MUTEK_SCHEDULER
+default defined
+desc Provide read/write locks based on hexo scheduler
+%config end
+
