--- a/libsrl/srl.config
+++ b/libsrl/srl.config
@@ -2,7 +2,7 @@
 %config CONFIG_SRL
 desc MutekS API
 provide CONFIG_MODULES=+libsrl:%CONFIGPATH
-depend CONFIG_HEXO_SCHED
+depend CONFIG_MUTEK_SCHEDULER
 depend CONFIG_ARCH_SOCLIB
 depend CONFIG_MWMR
 depend CONFIG_MWMR_SOCLIB
