--- a/libunix/unix.config
+++ b/libunix/unix.config
@@ -2,7 +2,7 @@
 %config CONFIG_UNIX
 desc Enable UNIX support
 require CONFIG_PTHREAD_STACK_SIZE
-depend CONFIG_HEXO_SCHED
+depend CONFIG_MUTEK_SCHEDULER
 depend CONFIG_HEXO_VMEM
 require CONFIG_UNIX_STACK_VADDR
 require CONFIG_UNIX_START_VADDR
