- debuging macro for vfat is changed for being used in mutekh' standard build system. - DevFS is almost finished, need to readdir and read/write to files and it'll be done. - moving init of vfs to main thread.

--- a/drivers/fs/vfat/vfat.config
+++ b/drivers/fs/vfat/vfat.config
@@ -4,3 +4,8 @@ depend CONFIG_VFS
 desc enable VFAT filesystem support
 default undefined
 %config end
+
+%config CONFIG_VFAT_DEBUG
+parent CONFIG_DRIVER_FS_VFAT
+desc Enables VFAT debugging
+%config end
