Changed the debug macro of vfat and added another macro for vfat instrumentation.

--- a/drivers/fs/vfat/vfat.config
+++ b/drivers/fs/vfat/vfat.config
@@ -5,7 +5,12 @@ desc enable VFAT filesystem support
 default undefined
 %config end
 
-%config CONFIG_VFAT_DEBUG
+%config CONFIG_DRIVER_FS_VFAT_DEBUG
 parent CONFIG_DRIVER_FS_VFAT
 desc Enables VFAT debugging
+%config end
+
+%config CONFIG_DRIVER_FS_VFAT_INSTRUMENT
+parent CONFIG_DRIVER_FS_VFAT
+desc Enables VFAT instrumentation
 %config end
