- initializing NFS into VFS seems to work - moving DEVFS_DEBUG to DRIVER_FS_DEVFS_DEBUG - adding to driver/fs/Makefile instruction to enter nfs directory - conflict with nfs name from libnetwork/lwnfs and driver/fs/nfs

--- a/drivers/fs/Makefile
+++ b/drivers/fs/Makefile
@@ -9,3 +9,7 @@ endif
 ifeq ($(CONFIG_DRIVER_FS_DEV), defined)
  subdirs += devfs
 endif
+
+ifeq ($(CONFIG_DRIVER_FS_NFS), defined)
+ subdirs += nfs
+endif
