--- a/drivers/fs/devfs/devfs.config
+++ b/drivers/fs/devfs/devfs.config
@@ -5,7 +5,7 @@ desc give a device file system
 default undefined
 %config end
 
-%config CONFIG_DEVFS_DEBUG
+%config CONFIG_DRIVER_FS_DEVFS_DEBUG
 require CONFIG_DRIVER_FS_DEV
 desc Set a debugging flag
 %config end
