termui and lua examples

--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -1,19 +1,8 @@
+
 %config CONFIG_LIBTERMUI
 desc Enable libtermui
 provide CONFIG_MODULES=+libtermui:%CONFIGPATH
+provide CONFIG_LICENSE_USE_GPL
 default undefined
 %config end
-
-%config CONFIG_LIBTERMUI_CONSOLE
-desc Enable libtermui console
-parent CONFIG_LIBTERMUI
-default undefined
-%config end
-
-%config CONFIG_LIBTERMUI_GETLINE
-desc Enable libtermui getline
-parent CONFIG_LIBTERMUI
-default undefined
-%config end
-
 
