* Added vfs support for libc streaming functions (fopen, fread, etc)  * Fixed a bug in fgets  * Changed the define for the whence arg in libvfs to match libc

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -19,3 +19,7 @@ ifeq ($(CONFIG_LIBC_STREAM_STD), defined)
 objs += stream_std.o
 endif
 
+ifeq ($(CONFIG_LIBC_STREAM_VFS), defined)
+objs += stream_vfs.o
+endif
+
