--- a/libc/libc.config
+++ b/libc/libc.config
@@ -37,6 +37,13 @@ depend CONFIG_MUTEK_CONSOLE
 default defined
 %config end
 
+%config CONFIG_LIBC_STREAM_VFS
+desc Enable support for vfs
+parent CONFIG_LIBC_STREAM
+require CONFIG_VFS
+default defined
+%config end
+
 %config CONFIG_LIBC_STRING_ASM
 desc A processor specific libc string.h header is available
 default undefined
