Vfs support for libc is undefined by default.

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -41,7 +41,7 @@ default defined
 desc Enable support for vfs
 parent CONFIG_LIBC_STREAM
 require CONFIG_VFS
-default defined
+default undefined
 %config end
 
 %config CONFIG_LIBC_STRING_ASM
