soclib memory checker code added

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -11,3 +11,13 @@ desc Enable use of ramlock devices instead of cpu atomic operations
 default defined
 %config end
 
+%config CONFIG_SOCLIB_MEMCHECK
+desc Enable instrumentation with the SocLib memory checker ISS wrapper
+default undefined
+%config end
+
+%config CONFIG_SOCLIB_MEMCHECK_ADDRESS
+default 0x00004200
+parent CONFIG_SOCLIB_MEMCHECK
+%config end
+
