more soclib memory checker code added

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -14,6 +14,8 @@ default defined
 %config CONFIG_SOCLIB_MEMCHECK
 desc Enable instrumentation with the SocLib memory checker ISS wrapper
 default undefined
+exclude CONFIG_HEXO_MEMALLOC_GUARD
+depend CONFIG_HEXO_MEMALLOC_ALGO
 %config end
 
 %config CONFIG_SOCLIB_MEMCHECK_ADDRESS
