context_init stack parameters changed

--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -8,8 +8,7 @@ provide CONFIG_MODULES=+libpthread:%CONFIGPATH
 %config end
 
 %config CONFIG_PTHREAD_STACK_SIZE
-desc Size of the stack allocated for each pthread. Stack size is
-desc specified in stack words count.
+desc Size of the stack allocated for each pthread. Stack size is specified in stack bytes count.
 parent CONFIG_PTHREAD
 default 4096
 %config end
