--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -56,7 +56,7 @@ default undefined
 
 %config CONFIG_MUTEK_SCHEDULER_IDLE_STACK_SIZE
 desc Size of the stack allocated for idle scheduler context.
-desc Stack size is specified in stack words count.
+desc Stack size is specified in stack bytes count.
 parent CONFIG_MUTEK_SCHEDULER
 default 256
 %config end
