Make __assert_fail a function in order to be able to break on it

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -11,6 +11,10 @@ ifeq ($(CONFIG_LIBC_SEMAPHORE), defined)
 objs += sem.o
 endif
 
+ifeq ($(CONFIG_LIBC_ASSERT), defined)
+objs += assert.o
+endif
+
 ifeq ($(CONFIG_LIBC_STREAM), defined)
 objs += stream.o
 endif
