Export an ad-hoc symbol for IssMemchecker when it is enabled

--- a/arch/soclib/Makefile
+++ b/arch/soclib/Makefile
@@ -3,6 +3,11 @@ objs = 											\
 arch_init.o										\
 mem_alloc.o
 
+ifeq ($(CONFIG_SOCLIB_MEMCHECK), defined)
+ objs += mem_checker.o
+endif
+
+
 ifeq ($(LINKING),1)
 
 meta = ldscript
