Implement lock-free mwmr protocol (atomic operations-based)

--- a/libmwmr/Makefile
+++ b/libmwmr/Makefile
@@ -4,6 +4,10 @@ objs += mwmr_pthread.o
 endif
 
 ifeq ($(CONFIG_MWMR_SOCLIB),defined)
+ifeq ($(CONFIG_MWMR_LOCKFREE),defined)
+objs += mwmr_soclib_lockfree.o
+else
 objs += mwmr_soclib.o
+endif
 endif
 
