--- a/libmwmr/mwmr.config
+++ b/libmwmr/mwmr.config
@@ -31,3 +31,11 @@ desc Mwmr is ramlocks based, only under SRL, does not change platform s lock bac
 parent CONFIG_MWMR
 require CONFIG_SRL
 %config end
+
+%config CONFIG_MWMR_LOCKFREE
+desc Mwmr is completely using atomic operations, only under SRL, does not change platform s lock backend
+parent CONFIG_MWMR_SOCLIB
+require CONFIG_SRL
+require CONFIG_CPU_MIPS
+require CONFIG_CPU_ENDIAN_LITTLE
+%config end
