libc stream cleaned/updated, printf replaced by printk, printf is now part of libc standard stream functions

--- a/drivers/device/block/file-emu/block-file-emu.config
+++ b/drivers/device/block/file-emu/block-file-emu.config
@@ -1,6 +1,6 @@
 
 %config CONFIG_DRIVER_BLOCK_EMU
-desc enable soclib block device support
+desc enable emu block device support
 require CONFIG_DRIVER_BLOCK_EMU_BLOCKSIZE
 %config end
 
