--- a/libvfs/vfs.config
+++ b/libvfs/vfs.config
@@ -9,6 +9,12 @@ parent CONFIG_VFS
 desc Enables VFS debugging
 %config end
 
+%config CONFIG_VFS_LIBC_STREAM
+desc Enable support for vfs
+parent CONFIG_VFS
+depend CONFIG_VFS
+%config end
+
 %config CONFIG_BC_DEBUG
 parent CONFIG_VFS
 desc Enables BufferCache debugging
