dummy errno.h added to libc, timer.c moved from libc/ to mutek/, some lua libraries merged

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -4,7 +4,7 @@ alloc.o											\
 intconv.o										\
 printf.o										\
 rand.o											\
-timer.o
+error.o											\
 
 ifeq ($(CONFIG_LIBC_SEMAPHORE), defined)
 objs += sem.o
