C library and Vfs changed again. fd based functions added to libc

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -100,3 +100,8 @@ desc Size of initial memory reserved for kernel use
 default 0x00800000
 %config end
 
+%config CONFIG_HEXO_INTTYPES_DEPRECATED
+desc Mark short, int and long compiler types has deprecated because their size may vary between architectures
+default defined
+%config end
+
