--- a/libc/Makefile
+++ b/libc/Makefile
@@ -1,10 +1,12 @@
-objs = 											\
-string.o										\
-alloc.o											\
-intconv.o										\
-printf.o										\
-rand.o											\
-error.o											\
+objs =						\
+string.o					\
+alloc.o						\
+intconv.o					\
+printf.o					\
+rand.o						\
+error.o						\
+stdlib.o					\
+unistd.o
 
 ifeq ($(CONFIG_LIBC_SEMAPHORE), defined)
 objs += sem.o
@@ -15,10 +17,10 @@ objs += assert.o
 endif
 
 ifeq ($(CONFIG_LIBC_STREAM), defined)
-objs += stream.o
+objs += stdio.o
 endif
 
 ifeq ($(CONFIG_LIBC_STREAM_STD), defined)
-objs += stream_std.o
+objs += stdio_in_out_err.o
 endif
 
