--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -8,7 +8,7 @@ provide CONFIG_MODULES=+arch:%CONFIGPATH
 
 %config CONFIG_ARCH_SOCLIB_RAMLOCK
 desc Enable use of ramlock devices instead of cpu atomic operations
-default defined
+default undefined
 %config end
 
 %config CONFIG_SOCLIB_MEMCHECK
