--- a/drivers/device/fb/Makefile
+++ b/drivers/device/fb/Makefile
@@ -3,3 +3,7 @@ ifeq ($(CONFIG_DRIVER_FB_VGA), defined)
  subdirs += vga
 endif
 
+ifeq ($(CONFIG_DRIVER_FB_SOCLIB), defined)
+ subdirs += soclib
+endif
+
