removed default ramdisk size

--- a/drivers/device/block/ramdisk/block-ramdisk.config
+++ b/drivers/device/block/ramdisk/block-ramdisk.config
@@ -8,7 +8,7 @@ require CONFIG_DRIVER_BLOCK_RAMDISK_BLOCKSIZE
 %config CONFIG_DRIVER_BLOCK_RAMDISK_SIZE
 parent CONFIG_DRIVER_BLOCK_RAMDISK
 desc ram block device size in blocks
-default 2048
+default undefined
 %config end
 
 %config CONFIG_DRIVER_BLOCK_RAMDISK_BLOCKSIZE
