soft float compile flags added

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -15,6 +15,11 @@ desc Generate position independant code
 default defined
 %config end
 
+%config CONFIG_COMPILE_SOFTFLOAT
+desc Use software only floating point
+default undefined
+%config end
+
 %config CONFIG_COMPILE_COLLECT
 desc Enable symbols garbage collection to reduce binary size
 %config end
