Stable release of the runtime loader:  * support for mips and x86  * user interface to load and launch a program and its associated shared library(ies)  * example available

--- a/cpu/x86/Makefile
+++ b/cpu/x86/Makefile
@@ -9,6 +9,6 @@ ifeq ($(CONFIG_HEXO_VMEM), defined)
 objs += vmem.o
 endif
 
-subdirs = libc libnetwork
+subdirs = libc libnetwork librtld
 
 copy = ldscript
