Add virtual support of MMU

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -4,6 +4,7 @@ desc SocLib platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=soclib
 provide CONFIG_MODULES=+arch:%CONFIGPATH
+provide CONFIG_HEXO_MMU_PAGESIZE=4096
 %config end
 
 %config CONFIG_ARCH_SOCLIB_RAMLOCK
