--- a/cpu/x86/Makefile
+++ b/cpu/x86/Makefile
@@ -5,8 +5,8 @@ boot.o											\
 cpu_init.o										\
 cpu_context.o
 
-ifeq ($(CONFIG_HEXO_VMEM), defined)
-objs += vmem.o
+ifeq ($(CONFIG_HEXO_MMU), defined)
+objs += mmu.o
 endif
 
 subdirs = libc libnetwork librtld
