--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -70,32 +70,48 @@ parent CONFIG_HEXO_MEMALLOC_GUARD
 depend CONFIG_COMPILE_INSTRUMENT
 %config end
 
-%config CONFIG_HEXO_VMEM
-desc Enable virtual memory support
+%config CONFIG_HEXO_CPU_MMU
+desc Use processor MMU driver implementation
+parent CONFIG_HEXO_MMU
+%config end
+
+%config CONFIG_HEXO_ARCH_MMU
+desc Use platform MMU driver implementation
+parent CONFIG_HEXO_MMU
+%config end
+
+%config CONFIG_HEXO_MMU
+desc Enable MMU driver
 default undefined
-require CONFIG_HEXO_VMEM_PAGESIZE
-require CONFIG_ARCH_IBMPC
+require CONFIG_HEXO_MMU_PAGESIZE
+require CONFIG_HEXO_MEMALLOC_ALGO
+require CONFIG_HEXO_CPU_MMU CONFIG_HEXO_ARCH_MMU
+single CONFIG_HEXO_CPU_MMU CONFIG_HEXO_ARCH_MMU
 %config end
 
-%config CONFIG_HEXO_VMEM_PAGESIZE
+%config CONFIG_HEXO_MMU_PAGESIZE
 desc Virtual memory physical page size
-parent CONFIG_HEXO_VMEM
-default 4096
+parent CONFIG_HEXO_MMU
 %config end
 
-%config CONFIG_HEXO_VMEM_START
+%config CONFIG_HEXO_MMU_USER_START
 desc Virtual memory minimal user accessible start address
-parent CONFIG_HEXO_VMEM
+parent CONFIG_HEXO_MMU
 default 0x40000000
 %config end
 
-%config CONFIG_HEXO_VMEM_END
+%config CONFIG_HEXO_MMU_USER_END
 desc Virtual memory minimal user accessible end address
-parent CONFIG_HEXO_VMEM
+parent CONFIG_HEXO_MMU
 default 0xc0000000
 %config end
 
-%config CONFIG_HEXO_VMEM_INITIAL
+%config CONFIG_HEXO_MMU_INITIAL_START
+desc Size of initial memory reserved for kernel use
+default 0x00000000
+%config end
+
+%config CONFIG_HEXO_MMU_INITIAL_END
 desc Size of initial memory reserved for kernel use
 default 0x00800000
 %config end
