--- a/libunix/unix.config
+++ b/libunix/unix.config
@@ -3,7 +3,7 @@
 desc Enable UNIX support
 require CONFIG_PTHREAD_STACK_SIZE
 depend CONFIG_MUTEK_SCHEDULER
-depend CONFIG_HEXO_VMEM
+depend CONFIG_HEXO_MMU
 require CONFIG_UNIX_STACK_VADDR
 require CONFIG_UNIX_START_VADDR
 provide CONFIG_MODULES=+libunix:%CONFIGPATH
