--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -20,6 +20,24 @@ desc Add builtin MutekH logo bitmap to the kernel
 depend CONFIG_DRIVER_FB
 %config end
 
+
+%config CONFIG_VMEM
+provide CONFIG_HEXO_MMU
+provide CONFIG_VMEM_PHYS_ALLOC
+provide CONFIG_VMEM_KERNEL_ALLOC
+%config end
+
+%config CONFIG_VMEM_PHYS_ALLOC
+desc Provide physical page allocator for virtual memory
+%config end
+
+%config CONFIG_VMEM_KERNEL_ALLOC
+require CONFIG_HEXO_MMU
+require CONFIG_VMEM_PHYS_ALLOC
+desc Provide kernel virtual address space allocator
+%config end
+
+
 %config CONFIG_MUTEK_SCHEDULER
 desc Hexo scheduler feature is enabled
 default defined
@@ -72,4 +90,5 @@ depend CONFIG_MUTEK_SCHEDULER
 default defined
 desc Provide read/write locks based on hexo scheduler
 %config end
+
 
