--- a/arch/soclib/Makefile
+++ b/arch/soclib/Makefile
@@ -3,10 +3,13 @@ objs = 											\
 arch_init.o										\
 mem_alloc.o
 
+ifeq ($(CONFIG_HEXO_MMU), defined)
+objs += mmu.o
+endif
+
 ifeq ($(CONFIG_SOCLIB_MEMCHECK), defined)
  objs += mem_checker.o
 endif
-
 
 ifeq ($(LINKING),1)
 
