--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -10,6 +10,7 @@ provide CONFIG_LIBC_STRING_ASM
 provide CONFIG_CPU_RESET_ADDR=0x000ffff0
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_COMPILE_SIZEOF_INT=4
+provide CONFIG_HEXO_MMU_PAGESIZE=4096
 %config end
 
 %config CONFIG_CPU_X86_ALIGNCHECK
