--- a/mutek/Makefile
+++ b/mutek/Makefile
@@ -9,11 +9,20 @@ ifeq ($(CONFIG_MUTEK_LOGO), defined)
  objs += mutek_logo_320x200.o
 endif
 
+ifeq ($(CONFIG_VMEM_PHYS_ALLOC), defined)
+objs += vmem_palloc.o
+endif
+
 ifeq ($(CONFIG_MUTEK_SCHEDULER), defined)
 objs += scheduler.o
+endif
+
+ifeq ($(CONFIG_VMEM_KERNEL_ALLOC), defined)
+objs += vmem_kalloc.o
 endif
 
 ifeq ($(CONFIG_MUTEK_RWLOCK), defined)
 objs += rwlock.o
 endif
+
 
