Added the block device handling to mutek_main()

--- a/drivers/device/block/soclib/block-soclib.config
+++ b/drivers/device/block/soclib/block-soclib.config
@@ -1,5 +1,9 @@
 
 %config CONFIG_DRIVER_BLOCK_SOCLIB
 desc enable soclib block device support
+default undefined
+depend CONFIG_ARCH_SOCLIB
+depend CONFIG_DRIVER_ICU
+provide CONFIG_DRIVER_BLOCK
 %config end
 
