--- a/drivers/device/drivers.config
+++ b/drivers/device/drivers.config
@@ -39,3 +39,8 @@ flags nodefine
 desc At least one sound driver must be enabled to have it defined
 %config end
 
+%config CONFIG_DRIVER_BLOCK
+flags nodefine
+desc At least one block device driver must be enabled to have it defined
+%config end
+
