Give a start at PPC IRQ handling

--- a/cpu/ppc/Makefile
+++ b/cpu/ppc/Makefile
@@ -1,7 +1,10 @@
 
 objs = 											\
 boot.o											\
+exception.o										\
 cpu_init.o										\
 cpu_context.o
 
 copy = ldscript
+
+subdirs = libc
