add cpu_mips_mtc2 and cpu_mips_mfc2, and code cleanup

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -24,3 +24,8 @@ default 0x00004200
 parent CONFIG_SOCLIB_MEMCHECK
 %config end
 
+%config CONFIG_SOCLIB_VMEM_MALLOC_REGION_SIZE
+desc Initial memory allocation region size. Must be at least egal to the number of physical page in memory * 4
+default 0x8000
+parent CONFIG_HEXO_MMU
+%config end
