compiler optimize and debug switches have separate configuration options

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -25,8 +25,14 @@ desc Enable symbols garbage collection to reduce binary size
 %config end
 
 %config CONFIG_COMPILE_DEBUG
-desc Disable compiler optimization and add debug symbols
+desc Enable compiler debug switch
 provide CONFIG_COMPILE_FRAMEPTR
+%config end
+
+%config CONFIG_COMPILE_OPTIMIZE
+desc Set compiler optimize switch value (0, 1, 2, 3, s)
+default 2
+flags mandatory
 %config end
 
 %config CONFIG_COMPILE_FRAMEPTR
