soclib virtual memory code cleanup

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -20,6 +20,7 @@ depend CONFIG_HEXO_MEMALLOC_ALGO
 %config end
 
 %config CONFIG_SOCLIB_MEMCHECK_ADDRESS
+desc Memory check address
 default 0x00004200
 parent CONFIG_SOCLIB_MEMCHECK
 %config end
