--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -22,6 +22,7 @@ depend CONFIG_DRIVER_FB
 
 
 %config CONFIG_VMEM
+desc Provide virtual memory support
 provide CONFIG_HEXO_MMU
 provide CONFIG_VMEM_PHYS_ALLOC
 provide CONFIG_VMEM_KERNEL_ALLOC
