Added/modified stuff around runtime loading library

--- a/librtld/rtld.config
+++ b/librtld/rtld.config
@@ -3,6 +3,7 @@
 desc Enable runtime Loader library
 provide CONFIG_MODULES=+librtld:%CONFIGPATH
 provide CONFIG_LICENSE_USE_GPL
+depend CONFIG_VFS
 %config end
 
 %config CONFIG_LIBRTLD_PAGE_SIZE
@@ -22,3 +23,5 @@ desc Convert pathnames into uppershort names
 parent CONFIG_LIBRTLD
 default defined
 %config end
+
+# vim: filetype=conf
