Add CPU-specific ICUs

--- a/drivers/device/icu/Makefile
+++ b/drivers/device/icu/Makefile
@@ -7,3 +7,15 @@ ifeq ($(CONFIG_DRIVER_ICU_SOCLIB), defined)
  subdirs += soclib
 endif
 
+ifeq ($(CONFIG_DRIVER_ICU_MIPS), defined)
+ subdirs += mips
+endif
+
+ifeq ($(CONFIG_DRIVER_ICU_PPC), defined)
+ subdirs += ppc
+endif
+
+ifeq ($(CONFIG_DRIVER_ICU_ARM), defined)
+ subdirs += arm
+endif
+
