--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -9,4 +9,7 @@ ifeq ($(CONFIG_COMPILE_INSTRUMENT), defined)
 objs += instrument.o
 endif
 
+ifeq ($(CONFIG_HEXO_IPI), defined)
+objs += ipi.o
+endif
 
