libdsrl: PIC setup is handled by the tasks.

--- a/libdsrl/dsrl.config
+++ b/libdsrl/dsrl.config
@@ -9,15 +9,9 @@
 	#depend CONFIG_MWMR_SOCLIB
 	depend CONFIG_LIBLUA
 	depend CONFIG_VFS
-	depend CONFIG_LIBRTLD
+	depend CONFIG_RTLD
 	#require CONFIG_MUTEK_MAIN=undefined
 	require CONFIG_ARCH_SOCLIB_RAMLOCK=undefined
-%config end
-
-%config CONFIG_LIBDSRL_LUAAPI
-	desc "Enable Lua API for dsrl lib"
-	parent CONFIG_LIBDSRL
-	default defined
 %config end
 
 %config CONFIG_LIBDSRL_DEBUG
