Various small changes around librtld and mips  * mips: added a mips32 compliant cpu_set_context_user(); boot à la soclib (using the erl/eret trick).  * librtld: changed the CONFIG name; kernel interface gets its own config param; text and data segments are allocated in cached memory.  * arch/soclib: tried a more explicit description of a CONFIG param

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -26,7 +26,7 @@ parent CONFIG_SOCLIB_MEMCHECK
 %config end
 
 %config CONFIG_SOCLIB_VMEM_MALLOC_REGION_SIZE
-desc Initial memory allocation region size. Must be at least egal to the number of physical page in memory * 4
+desc Initial memory allocation region size in bytes. Must be at least equal to the number of physical page available in memory * 4 (to hold pointers to the physical pages).
 default 0x8000
 parent CONFIG_HEXO_MMU
 %config end
