--- a/librtld/rtld.config
+++ b/librtld/rtld.config
@@ -1,27 +1,32 @@
 
-%config CONFIG_LIBRTLD
-desc Enable runtime Loader library
+%config CONFIG_RTLD
+desc "Enable runtime Loader library"
 provide CONFIG_MODULES=+librtld:%CONFIGPATH
 provide CONFIG_LICENSE_USE_GPL
 depend CONFIG_VFS
 %config end
 
-%config CONFIG_LIBRTLD_PAGE_SIZE
-desc Page size for allocator
-parent CONFIG_LIBRTLD
-default 4096
-%config end
-
-%config CONFIG_LIBRTLD_DEBUG
-desc Enable RTLD lib debug information
-parent CONFIG_LIBRTLD
+%config CONFIG_RTLD_DEBUG
+desc "Enable RTLD lib debug information"
+parent CONFIG_RTLD
 default undefined
 %config end
 
+%config CONFIG_RTLD_PAGESIZE
+desc "Size of page for segment allocation (should match CONFIG_HEXO_MMU_PAGESIZE if any)"
+parent CONFIG_RTLD
+%config end
+
 %config CONFIG_RTLD_VFSNAME_HACK
-desc Convert pathnames into uppershort names
-parent CONFIG_LIBRTLD
+desc "Convert pathnames into uppershort names"
+parent CONFIG_RTLD
 default defined
+%config end
+
+%config CONFIG_RTLD_KERNEL
+desc "Allows to load kernel modules (not implemented yet)"
+parent CONFIG_RTLD
+default undefined
 %config end
 
 # vim: filetype=conf
