--- a/librtld/Makefile
+++ b/librtld/Makefile
@@ -1,2 +1,6 @@
 
-objs = elf.o rtld.o user.o kernel.o tls.o
+objs = elf.o rtld.o user.o tls.o
+
+ifeq ($(CONFIG_RTLD_KERNEL), defined)
+  objs += kernel.o
+endif
