Random libc changes for correctness, warnings, AVR support

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -3,16 +3,6 @@
 desc Enable assert() support
 %config end
 
-%config CONFIG_LIBC_PRINTF_SIMPLE
-desc libc printf() features are reduced
-default undefined
-%config end
-
-%config CONFIG_LIBC_PRINTF_EXT
-desc libc printf support %S and %P extentions to dump buffers
-default defined
-%config end
-
 %config CONFIG_LIBC_SEMAPHORE
 desc libc semaphore feature enabled
 default defined
@@ -34,6 +24,7 @@ default 256
 desc Enable support for stdin, stdout and stderr through tty device
 parent CONFIG_LIBC_STREAM
 depend CONFIG_MUTEK_CONSOLE
+depend CONFIG_LIBC_STREAM
 default defined
 %config end
 
