Add config tokens for printk

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -93,3 +93,17 @@ desc Provide read/write locks based on hexo scheduler
 %config end
 
 
+%config CONFIG_MUTEK_PRINTK
+desc Provide printk() for kernel messages
+default defined
+%config end
+
+%config CONFIG_PRINTF_ARG_SIMPLE
+desc libc printf() features are reduced
+default undefined
+%config end
+
+%config CONFIG_PRINTF_ARG_EXT
+desc libc printf support %S and %P extentions to dump buffers
+default defined
+%config end
