Add cache control where needed

--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -3,6 +3,7 @@
 desc PowerPC processors support
 default undefined
 require	CONFIG_ARCH_SOCLIB
+provide CONFIG_CPU_CACHE
 provide CONFIG_CPU_NAME=ppc
 provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_RESET_ADDR=0xfffffffc
