--- a/cpu/x86-emu/emu.config
+++ b/cpu/x86-emu/emu.config
@@ -3,6 +3,7 @@
 desc Linux Emulation processor support
 default undefined
 require	CONFIG_ARCH_EMU
+provide CONFIG_CPU_CACHE
 provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_NAME=x86-emu
 provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
