--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -3,6 +3,7 @@
 desc x86 processors support
 default undefined
 require	CONFIG_ARCH_IBMPC
+provide CONFIG_CPU_CACHE
 provide CONFIG_CPU_NAME=x86
 provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
