--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -3,6 +3,7 @@
 desc ARM processors support
 default undefined
 require	CONFIG_ARCH_SOCLIB
+provide CONFIG_CPU_CACHE
 provide CONFIG_CPU_NAME=arm
 provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_RESET_ADDR=0x00000000
