Rework cpu/avr <> arch/simple partitionning, redo arch/simple ldscript, move code to C part, add sched to arch simple

--- a/arch/simple/Makefile
+++ b/arch/simple/Makefile
@@ -3,5 +3,10 @@ objs =											\
 arch_init.o										\
 mem_alloc.o
 
-clean = ldscript
+
+ifeq ($(CONFIG_CPU_AVR),defined)
+subdirs+=atmega
+endif
+
+meta = ldscript
 
